--- a/Assignment 3/Task 2/app/src/main/res/values/strings.xml
+++ b/Assignment 3/Task 2/app/src/main/res/values/strings.xml
@@ -27,4 +27,6 @@
     <string name="your_order">Your Order</string>
     <string name="total_price">Total Price</string>
     <string name="clear_selection">Clear Selection</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
